--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,14 @@ keywords = ["readability"]
 categories = []
 
 [dependencies]
-regex = "1.4"
-url = "2.2"
-html5ever = "0.25"
-markup5ever_rcdom = "0.1"
-lazy_static = "1.4"
+regex = "1.9.3"
+url = "2.4.0"
+html5ever = "0.26.0"
+markup5ever_rcdom = "0.2.0"
+lazy_static = "1.4.0"
 
 [dependencies.reqwest]
-version = "0.11"
+reqwest = "0.11.18"
 optional = true
 features = ["blocking"]
 
