--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,7 @@ url = "2.4.0"
 html5ever = "0.26.0"
 markup5ever_rcdom = "0.2.0"
 lazy_static = "1.4.0"
-
-[dependencies.reqwest]
-reqwest = "0.11"
-features = ["blocking"]
+reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
 
 [features]
 default = ["reqwest"]
